Fix rsyslog - name not found

--- a/conf/rsyslog.conf
+++ b/conf/rsyslog.conf
@@ -10,6 +10,7 @@ input(type="imfile"
       File="/app/public/var/report/*"
       Tag="report"
       Severity="error"
+      addMetadata="on"
       Facility="local7")
 
-action(type="omfile" File="/proc/1/fd/0")
+action(type="omfile" File="/proc/1/fd/1")
