Set rsyslog log levels, fix consumer

--- a/conf/etc/rsyslog.conf
+++ b/conf/etc/rsyslog.conf
@@ -1,10 +1,41 @@
 module(load="imfile" PollingInterval="10") #needs to be done just once
 
 input(type="imfile"
-      File="/app/public/var/log/*"
+      File="/app/public/var/log/cron.log"
       Tag="magento"
-      Severity="info"
+      Severity="notice"
       Facility="local7")
+
+input(type="imfile"
+      File="/app/public/var/log/debug.log"
+      Tag="magento"
+      Severity="debug"
+      Facility="local7")
+
+input(type="imfile"
+      File="/app/public/var/log/exception.log"
+      Tag="magento"
+      Severity="crit"
+      Facility="local7")
+
+input(type="imfile"
+      File="/app/public/var/log/support_report.log"
+      Tag="magento"
+      Severity="notice"
+      Facility="local7")
+
+input(type="imfile"
+      File="/app/public/var/log/system.log"
+      Tag="magento"
+      Severity="notice"
+      Facility="local7")
+
+input(type="imfile"
+      File="/app/public/var/log/update.log"
+      Tag="magento"
+      Severity="crit"
+      Facility="local7")
+
 
 input(type="imfile"
       File="/app/public/var/report/*"
