--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,8 +4,8 @@ commit = True
 tag = True
 
 [bumpversion:file:Dockerfile]
-search = claranet.magento-base.version="{{current_version}}"
+search = claranet.magento-base.version="{current_version}"
 
 [bumpversion:file:build.sh]
-search = BASE_VERSION={{current_version}}
+search = BASE_VERSION={current_version}
 
