--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,7 +4,9 @@ commit = True
 tag = True
 
 [bumpversion:file:Dockerfile]
-search = claranet.magento-base.version="{current_version}"
+search  = claranet.magento-base.version="{current_version}"
+replace = claranet.magento-base.version="{new_version}"
 
 [bumpversion:file:build.sh]
-search = BASE_VERSION={current_version}
+search  = BASE_VERSION={current_version}
+replace = BASE_VERSION={new_version}
